scss/_mobile.scss
// Widescreens
@include mediaXl {
  .projects {
    grid-template-columns: repeat(4, 1fr);
  }
}

// Desktops & laptops
@include mediaLg {
  .projects {
    grid-template-columns: repeat(3, 1fr);
  }
}

// Tablets
@include mediaMd {
  main {
    align-items: center;
    text-align: center;

    .lg-heading {
      line-height: 1;
      margin-bottom: 1rem;
    }
  }

  ul.menu-nav,
  div.menu-branding {
    float: none;
    width: 100%;
    min-height: 0;

    &.show {
      transform: translate3d(0, 0, 0);
    }
  }

  .menu-nav {
    height: 75vh;
    transform: translate3d(-100%, 0, 0);
    font-size: 24px;

    .nav-item {
      transform: translate3d(-300px, 0, 0);
      @include easeOut;
    }
  }

  @for $x from 1 through 4 {
    .nav-item:nth-child(#{$x}) {
      transition-delay: $x * 0.2s;
    }
  }

  .menu-branding {
    height: 26vh;
    transform: translate3d(100%, 0, 0);
  }

  .menu-img {
    top: 4.8vh;
    left: 38%;
    width: 150px;
    height: 150px;
    background: url('../img/profile-pic-xsmall.jpg');
    background-size: cover;
    transform: translate3d(300%, 0, 0);
    @include easeOut;
  }

  .about-info {
    grid-template-areas:
      'bioimage'
      'bio'
      'job1'
      'job2'
      'job3';
    grid-template-columns: 1fr;
  }

  .projects {
    grid-template-columns: repeat(2, 1fr);
  }
}

// Smartphones
@include mediaSm {
  main {
    padding: 1.4rem;

    #home h1 {
      margin-top: 7vh;
      font-size: 2rem;
    }

    .lg-heading {
      margin-top: 2rem;
      font-size: 3rem;
    }
  }
  .projects {
    grid-template-columns: 1fr;
  }
}

